# qf-diamond-norm

./: Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: python-build.yml
docs/: conf.py
qf_diamond_norm/: __init__.py  about.py  config.py  config_test.py  info.py  info_test.py
