# Setup Configuration File
# https://docs.python.org/3/distutils/configfile.html
# [INI](https://docs.python.org/3/install/index.html#inst-config-syntax) file format.

[metadata]
Metadata-Version: 2.2
Name = qf_diamond_norm
Summary =  The diamond norm between two completely positive trace-preserving (CPTP) superoperators
Long-Description = file:README.md
Long-Description-Content-Type = text/markdown
Keywords = quantum-computing,diamond-norm
Home-page = https://github.com/gecrooks/qf-diamond-norm/
Author = Gavin E. Crooks
Author-email = gec@threeplusone.com
License = Apache-2.0    
License-File = LICENSE

# https://pypi.org/classifiers/
Classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Programming Language :: Python
    Natural Language :: English
    Operating System :: OS Independent    
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering    
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = True
python_requires = >= 3.9

install_requires =
    quantumflow
    cvxpy

setup_requires =
  setuptools_scm

[options.extras_require]
dev =
    pytest >= 4.6
    pytest-cov
    flake8
    mypy
    black
    isort
    sphinx
    sphinxcontrib-bibtex
    setuptools_scm


# pytest configuration
[tool:pytest]
testpaths =
    qf_diamond_norm


# Configuration for test coverage
#
# https://coverage.readthedocs.io/en/latest/config.html
# > python -m pytest --cov
# Use ``# pragma: no cover`` to exclude specific lines

[coverage:paths]
source =
    qf_diamond_norm

[coverage:run]
omit =
    *_test.py

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    except ImportError
    assert False
    raise NotImplementedError()


# flake8 linter configuration
[flake8]
max-line-length = 88
ignore = E203, W503


# mypy typecheck configuration
#
# https://mypy.readthedocs.io/en/stable/config_file.html

[mypy]
files = qf_diamond_norm

# Suppresses error about unresolved imports (i.e. from numpy)
ignore_missing_imports = True

# Disallows functions without type annotations
disallow_untyped_defs = True

# Disable strict optional checks (Was default prior to mypy 0.600)
strict_optional = False
